Clean up general operation behavior. Add support for decimals. Disable unsupported buttons.
QCalcWidget[.h, .cpp]
  * New function to take the operation Type and return the associated string.
     - Use this new function in the constructor to build up the button
       connections
  * New function to add the decimal point if applicable. Do not add a decimal
    if there is already a decimal.
      - Connect the decimal button pressed with this function.
  * Add logic to override the default number after operations or equals are
    pushed. if " 9 + " is pressed, 9 is left in the line edit and if "5" is
    pressed that 9 should be cleared.
  * Logic to support doubles instead of ints for all the calculation logics
  * Pull math (+-/*) logic out of calculateAnswer() into math() function to be
    used to do this logic if multiple operations are tied together.

QCalcWidget.ui
  * Disable buttons that do not work yet.
  * Swap text on buttons to be actual operators.

--- a/QCalcWidget.ui
+++ b/QCalcWidget.ui
@@ -79,6 +79,9 @@
      </item>
      <item row="0" column="0">
       <widget class="QToolButton" name="mButton_LParen">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
          <horstretch>0</horstretch>
@@ -115,6 +118,9 @@
      </item>
      <item row="0" column="2">
       <widget class="QToolButton" name="mButton_Unknown">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
          <horstretch>0</horstretch>
@@ -127,7 +133,7 @@
         </font>
        </property>
        <property name="text">
-        <string>??</string>
+        <string>+/−</string>
        </property>
       </widget>
      </item>
@@ -151,6 +157,9 @@
      </item>
      <item row="0" column="1">
       <widget class="QToolButton" name="mButton_RightParen">
+       <property name="enabled">
+        <bool>false</bool>
+       </property>
        <property name="sizePolicy">
         <sizepolicy hsizetype="MinimumExpanding" vsizetype="MinimumExpanding">
          <horstretch>0</horstretch>
@@ -343,7 +352,7 @@
         </font>
        </property>
        <property name="text">
-        <string>/</string>
+        <string>÷</string>
        </property>
       </widget>
      </item>
@@ -361,7 +370,7 @@
         </font>
        </property>
        <property name="text">
-        <string>X</string>
+        <string>×</string>
        </property>
       </widget>
      </item>
@@ -379,7 +388,7 @@
         </font>
        </property>
        <property name="text">
-        <string>-</string>
+        <string>−</string>
        </property>
       </widget>
      </item>
