--- a/QCalcWidget.ui
+++ b/QCalcWidget.ui
@@ -156,7 +156,7 @@
       </widget>
      </item>
      <item row="0" column="1">
-      <widget class="QToolButton" name="mButton_RightParen">
+      <widget class="QToolButton" name="mButton_RParen">
        <property name="enabled">
         <bool>false</bool>
        </property>
